Fixed the text behind the image
IT'S DONE FINALLY. Apparently the image slideshow instead of having a z-index of 0 needed to be -1 despite the <p> tag already having a z-index of 15.
I still don't entirely understand it but it works and that's all that matters.

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ p {
     z-index: 15;
     top:30vh;
     text-align:center;
+    font-size: 28px;
 }
 
 .overlay {
@@ -51,6 +52,7 @@ p {
     top: 0;
     left: 0;
     z-index: 2;
+    pointer-events: none;
 }
 
 @keyframes fade {
@@ -72,14 +74,15 @@ p {
 }
 
 .slide-image {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
     top: 0;
     left: 0;
     animation: fade 9s ease-in-out infinite alternate;
-    z-index: 0; 
+    z-index: -1; 
+    pointer-events: none;
 }
 
 img:nth-of-type(1) {
@@ -105,12 +108,6 @@ h1 {
     -webkit-text-stroke: 1px black;
 }
 
-P {
-    z-index: 15;
-    font-size: 28px;
-}
-
-
 /**CSS grid**/
 .links {
     display: grid;
@@ -125,7 +122,7 @@ P {
 
 .link-img {
     height:15%;
-    
+
 }
 
 /** Hamburger start **/
